--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
+<!-- Navigation Bar -->
 <nav>  
     <ul>
         <li><a href="index.html">Home</a></li>
@@ -13,11 +14,11 @@
         
     </ul>
 </nav>   
-
+<!-- Header -->
 <div class ="header">
 <h1>Resting Places</h1> 
 </div>
-
+<!-- Body -->
 <div class="recoleta">
     <div class="recoletaphoto">
         <img src="Photos/recoleta_blog.jpg">
