--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
-
+<!-- Navigation Bar -->
 <nav>  
     <ul>
         <li><a href="index.html">Home</a></li>
@@ -14,10 +14,11 @@
     </ul>
 </nav>   
 
+<!-- Header -->
 <div class ="header">
 <h1>Resting Places</h1> 
 </div>
-
+<!-- Body -->
 <div class="hero">
 <img src="Photos/hero_home_banner.jpg">
 <h6>Green-Wood Cemetery - Brooklyn, NY</h6>
