--- a/about.html
+++ b/about.html
@@ -5,20 +5,19 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
-
+<!-- Navigation Bar -->
 <nav>  
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="about.html">About</a></li>
-        
     </ul>
 </nav>   
-
+<!-- Header -->
 <div class ="header">
 <h1>Resting Places</h1> 
 </div>
-
+<!-- Content -->
 <div class="aboutme">
     <div class="aboutmephoto">
         <img src="Photos/about_shay_photo.jpg">
