--- a/groupproject/about.html
+++ b/groupproject/about.html
@@ -15,7 +15,7 @@ href="style.css">
     <ul>
      <li><a href="index.html">Home</a></li>
      <li><a href="services.html">Services</a></li>
-     <li><a href="">About Us</a></li>
+     <li><a href="about.html">About Us</a></li>
      <li><a href="#">Contact</a></li>
     </ul>
 </nav>   
