--- a/groupproject/index.html
+++ b/groupproject/index.html
@@ -9,7 +9,7 @@
     <ul>
      <li><a href="index.html">Home</a></li>
      <li><a href="services.html">Services</a></li>
-     <li><a href="">About Us</a></li>
+     <li><a href="about.html">About Us</a></li>
      <li><a href="#">Contact</a></li>
     </ul>
 </nav>   
