--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 <!-- Content -->
 <div class="aboutme">
     <div class="aboutmephoto">
-        <img src="Photos/about_shay_photo.jpg">
+        <img src="photos/aboutshayphoto.jpg">
         <h5>Shay in her backyard at age 5</h5>
     </div>
     <div class="aboutmewords">
@@ -41,13 +41,13 @@
         </form>
     </div>
     <div class="contactmephoto">
-        <img src="Photos/contact.jpg">
+        <img src="photos/contact.jpg">
     </div>
     
 </div>
 
 <div class="thanks">
-    <img src="Photos/thanks.jpg">
+    <img src="photos/thanks.jpg">
     <p>&copy; Shay Andersen, 2018</p>
 </div>
 
