--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
 <!-- Body -->
 <div class="recoleta">
     <div class="recoletaphoto">
-        <img src="Photos/recoleta_blog.jpg">
+        <img src="photos/recoletablog.jpg">
     </div>
     <div class="recoletainfo">
         <h4>La Recoleta Cemetery</h4>
@@ -34,7 +34,7 @@
 
 <div class="stockholm">
     <div class="stockholmphoto">
-        <img src="Photos/skogskyrkan.jpg">
+        <img src="photos/skogskyrkan.jpg">
     </div>
     <div class="stockholminfo">
         <h4>Skogskyrkog&aring;rden</h4>
@@ -45,7 +45,7 @@
 </div>
 <div class="savannah">
     <div class="savannahphoto">
-        <img src="Photos/bonaventure_blog.jpg">
+        <img src="photos/bonaventure_blog.jpg">
     </div>
     <div class="savannahinfo">
         <h4>Bonaventure Cemetery</h4>
@@ -57,7 +57,7 @@
 </div>
 <div class="greenwood">
     <div class="greenwoodphoto">
-        <img src="Photos/greenwood_blog.jpg">
+        <img src="photos/greenwoodblog.jpg">
     </div>
     <div class="greenwoodinfo">
         <h4>Green-Wood Cemetery</h4>
