--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 <!-- Body -->
 <div class="hero">
-<img src="Photos/hero_home_banner.jpg">
+<img src="photos/herohomebanner.jpg">
 <h6>Green-Wood Cemetery - Brooklyn, NY</h6>
 </div>
 
@@ -33,14 +33,14 @@
 <div class="parent">
     <div class="blog">
         <div class="blogphoto">
-            <img src="Photos/blog_mainpage.jpg">
+            <img src="photos/blogmainpage.jpg">
         </div>
         <h3>Blog</h3>
         <p><a href="blog.html">Click to read my blog</a></p>
     </div>
     <div class="about">
         <div class="aboutphoto">
-            <img src="Photos/about_mainpage.jpg">
+            <img src="photos/aboutmainpage.jpg">
         </div>
         <h3>About</h3>
         <p><a href="about.html">Contact me, follow me, etc.</a></p>
